--- a/grading.qmd
+++ b/grading.qmd
@@ -2,16 +2,16 @@
 title: "Grading Policy"
 ---
 
-<!-- 
-- Quizzes: 48%
-    - 16% each
+
+- Quizzes: 54%
+    - 18% each
     - Best 3 out of 4
     - If you miss a single quiz for any reason, there will be no makeups
 ---
 
-- Assignments: 44%
+- Assignments: 40%
     - 4 or 5 assignments
-    - Done in groups of ~~5~~ **6** (preferred) or **7**
+    - Done in groups of TBA
     - Atleast one question per assignment will be a project-like question
     - Variable weight (e.g. some assignments would be 10%, some 12%, etc.)
     - Some assignments would involve:
@@ -19,12 +19,14 @@ title: "Grading Policy"
         - Writing Hugging Face Spaces like demos
 ---
 
-- Attendance: 8%
-    - <= 3 absences: 8%
-    - 4 or 5 absences: 7%
-    - 6 or 7 absences: 6%
-    - 8 or 9 absences: 4%
+- Attendance: 6%
+    - <= 3 absences: 6%
+    - 4 or 5 absences: 5%
+    - 6 or 7 absences: 4%
+    - 8 or 9 absences: 3%
     - 10 or 11 absences: 2%
     - 12 or more absences: 0%
 
- -->
+
+
+
