--- a/grading.qmd
+++ b/grading.qmd
@@ -27,6 +27,22 @@ title: "Grading Policy"
     - 10 or 11 absences: 2%
     - 12 or more absences: 0%
 
+---
+
+BONUS (above 100%)
+
+- Kaggle like competition bonus: (subject to change)
+    - 80th percentile: 1%
+    - 95th percentile: 3%
+    - Top three: 5%
+
+---
+
+- Potetially considering but not final some bonus marks for correct in-class resposnes to instructor questions
+
+
+
+
 
 
 
