added first two lectures

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -11,12 +11,13 @@ title: "Schedule"
 
 :::
 
+
+| Lecture # |    Date     | Topic (Slides)                                  | Notebooks |  Reading |
+| :-------: | :---------: | :---------------------------------------------- | :-------: |  ------- |
+|     0     | 30 Dec 2023 | [Pre-requisite quiz released](exams/prereq.qmd) |           |          |
+|     1     |    3 Jan    | [Introduction and Logistics](https://nipunbatra.github.io/ml-teaching/slides/1-introduction-ml.pdf)                      |      [Transcription and local LLMs](https://nipunbatra.github.io/ml-teaching/notebooks/transcript.html), [Segmentation and Localization](https://nipunbatra.github.io/ml-teaching/notebooks/object-detection-segmentation.html), [Prompt to Image](https://nipunbatra.github.io/ml-teaching/notebooks/text_to_image.html)     |            |
+| 2| 5 Jan| [Convention, Metrics, Classification, Regression](https://nipunbatra.github.io/ml-teaching/slides/accuracy_convention.pdf)|[Rule based vs ML](https://nipunbatra.github.io/ml-teaching/notebooks/rule-based-vs-ml.html), [Confusion Matrix](https://nipunbatra.github.io/ml-teaching/notebooks/confusion-mnist.html), [Dummy baselines](https://nipunbatra.github.io/ml-teaching/notebooks/dummy-baselines.html)||
  <!-- your comment
-| Lecture # |    Date     | Topic (Slides)                                  | Notebooks | YouTube Recording | Reading |
-| :-------: | :---------: | :---------------------------------------------- | :-------: | --------- | ------- |
-|     0     | 30 Dec 2023 | [Pre-requisite quiz released](exams/prereq.qmd) |           |           |         |
-|     1     |    3 Jan    | [Introduction and Logistics](https://nipunbatra.github.io/ml-teaching/slides/1-introduction-ml.pdf)                      |      [Transcription and local LLMs](https://nipunbatra.github.io/ml-teaching/notebooks/transcript.html), [Segmentation and Localization](https://nipunbatra.github.io/ml-teaching/notebooks/object-detection-segmentation.html), [Prompt to Image](https://nipunbatra.github.io/ml-teaching/notebooks/text_to_image.html)     |      [Recording](https://www.youtube.com/watch?v=XuDrvFmvk2U)     |         |
-| 2| 5 Jan| [Convention, Metrics, Classification, Regression](https://nipunbatra.github.io/ml-teaching/slides/accuracy_convention.pdf)|[Rule based vs ML](https://nipunbatra.github.io/ml-teaching/notebooks/rule-based-vs-ml.html), [Confusion Matrix](https://nipunbatra.github.io/ml-teaching/notebooks/confusion-mnist.html), [Dummy baselines](https://nipunbatra.github.io/ml-teaching/notebooks/dummy-baselines.html)|[Recording](https://www.youtube.com/watch?v=WUfduFsodE0)||
 | 3| 8 Jan| [Decision Trees 1](https://nipunbatra.github.io/ml-teaching/slides/decision-trees.pdf)|[Entropy](https://nipunbatra.github.io/ml-teaching/notebooks/entropy.html), [Decision Trees Real Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-output.html), [DT Real Input Discrete Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-discrete-output.html)|[Recording](https://www.youtube.com/watch?v=Bc6p3Yxgo7c)||
 | 4| 10 Jan| [Decision Trees 2, Bias and Variance](https://nipunbatra.github.io/ml-teaching/slides/bias-variance.pdf)|[Bias variance](https://nipunbatra.github.io/ml-teaching/notebooks/bias-variance.html), [Decision Trees + Overfitting, Underfitting](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-real-output.html)| [Recording](https://www.youtube.com/watch?v=zqNj-B78i_0)||
 |5| 12 Jan| Tutorial on Numpy, Pandas, Classes, [Cross-validation](https://nipunbatra.github.io/ml-teaching/slides/cross-validation.pdf)| [Numpy, Pandas, Entropy](https://nipunbatra.github.io/ml-teaching/notebooks/numpy-pandas-basics.html), [Classes and Trees](https://nipunbatra.github.io/ml-teaching/notebooks/classes-trees.html), [Cross-validation and tuning hyperparameters](https://nipunbatra.github.io/ml-teaching/notebooks/hyperparams-experiments.html)| [Tutorial recording](https://www.youtube.com/watch?v=P980btm9C3c), [Lecture on Cross-validation](https://www.youtube.com/watch?v=GP4XW8wzPM8)||
