--- a/schedule.qmd
+++ b/schedule.qmd
@@ -17,9 +17,16 @@ title: "Schedule"
 |     0     | 25 Jul| [Pre-requisite quiz released](exams/prereq.qmd) |           |          |
 |     1     |    2 Aug    | [Introduction and Logistics](https://nipunbatra.github.io/ml-teaching/slides/1-introduction-ml.pdf)                      |      [Transcription and local LLMs](https://nipunbatra.github.io/ml-teaching/notebooks/transcript.html), [Segmentation and Localization](https://nipunbatra.github.io/ml-teaching/notebooks/object-detection-segmentation.html), [Prompt to Image](https://nipunbatra.github.io/ml-teaching/notebooks/text_to_image.html)     |            |
 | 2| 6 Aug| [Convention, Metrics, Classification, Regression](https://nipunbatra.github.io/ml-teaching/slides/accuracy_convention.pdf)|[Rule based vs ML](https://nipunbatra.github.io/ml-teaching/notebooks/rule-based-vs-ml.html), [Confusion Matrix](https://nipunbatra.github.io/ml-teaching/notebooks/confusion-mnist.html), [Dummy baselines](https://nipunbatra.github.io/ml-teaching/notebooks/dummy-baselines.html)||
- | 3| 7 Aug| [Decision Trees 1](https://nipunbatra.github.io/ml-teaching/slides/decision-trees.pdf)|[Entropy](https://nipunbatra.github.io/ml-teaching/notebooks/entropy.html), [Decision Trees Real Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-output.html), [DT Real Input Discrete Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-discrete-output.html)||
+| 3| 7 Aug| [Decision Trees 1](https://nipunbatra.github.io/ml-teaching/slides/decision-trees.pdf)|[Entropy](https://nipunbatra.github.io/ml-teaching/notebooks/entropy.html), [Decision Trees Real Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-output.html), [DT Real Input Discrete Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-discrete-output.html)||
 | 4| 9 Aug| [Decision Trees 2, Bias and Variance](https://nipunbatra.github.io/ml-teaching/slides/bias-variance.pdf)|[Bias variance](https://nipunbatra.github.io/ml-teaching/notebooks/bias-variance.html), [Decision Trees + Overfitting, Underfitting](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-real-output.html)| |
 |5| 13 Aug| Tutorial on Numpy, Pandas, Classes, [Cross-validation](https://nipunbatra.github.io/ml-teaching/slides/cross-validation.pdf)| [Numpy, Pandas, Entropy](https://nipunbatra.github.io/ml-teaching/notebooks/numpy-pandas-basics.html), [Classes and Trees](https://nipunbatra.github.io/ml-teaching/notebooks/classes-trees.html), [Cross-validation and tuning hyperparameters](https://nipunbatra.github.io/ml-teaching/notebooks/hyperparams-experiments.html)||
+|6| 16 Aug| [Lecture on Random Forests](https://nipunbatra.github.io/ml-teaching/slides/ensemble.pdf)||[Notebook on Random Forests feature importance from scratch](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-feature-importance.html)||
+|7|20 Aug| Tutorial on RF feature importance, meshgrid, contour plots|[Notebook on Random Forests feature importance from scratch](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-feature-importance.html), [Notebook on meshgrid](https://nipunbatra.github.io/ml-teaching/notebooks/meshgrid.html)||
+
+|8| 21 Aug| [Linear Regression](https://nipunbatra.github.io/ml-teaching/slides/linear-regression.pdf)|||
+|9| 23 Aug| [Linear Regression: Basis Functions](https://nipunbatra.github.io/ml-teaching/slides/linear-regression.pdf)|[Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/basis.html)||
+|10| 27 Aug| [Linear Regression: Geometric Interpretation, Multi-colinearity, Dummy Variables](https://nipunbatra.github.io/ml-teaching/slides/linear-regression.pdf)|[Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/geometric-linear-regression.html), [Notebook on multi-colinearlity](https://nipunbatra.github.io/ml-teaching/notebooks/dummy-variables-multi-colinearity.html)||
+
 <!-- your comment
 
 |6| 15 Jan| Cross-validation, [Ensemble Methods](https://nipunbatra.github.io/ml-teaching/slides/ensemble.pdf)| [Cross-validation and tuning hyperparameters](https://nipunbatra.github.io/ml-teaching/notebooks/hyperparams-experiments.html)| [Recording](https://www.youtube.com/watch?v=FrNR-1cfpHc)||
