--- a/schedule.qmd
+++ b/schedule.qmd
@@ -20,7 +20,7 @@ title: "Schedule"
 | 3| 7 Aug| [Decision Trees 1](https://nipunbatra.github.io/ml-teaching/slides/decision-trees.pdf)|[Entropy](https://nipunbatra.github.io/ml-teaching/notebooks/entropy.html), [Decision Trees Real Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-output.html), [DT Real Input Discrete Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-discrete-output.html)||
 | 4| 9 Aug| [Decision Trees 2, Bias and Variance](https://nipunbatra.github.io/ml-teaching/slides/bias-variance.pdf)|[Bias variance](https://nipunbatra.github.io/ml-teaching/notebooks/bias-variance.html), [Decision Trees + Overfitting, Underfitting](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-real-output.html)| |
 |5| 13 Aug| Tutorial on Numpy, Pandas, Classes, [Cross-validation](https://nipunbatra.github.io/ml-teaching/slides/cross-validation.pdf)| [Numpy, Pandas, Entropy](https://nipunbatra.github.io/ml-teaching/notebooks/numpy-pandas-basics.html), [Classes and Trees](https://nipunbatra.github.io/ml-teaching/notebooks/classes-trees.html), [Cross-validation and tuning hyperparameters](https://nipunbatra.github.io/ml-teaching/notebooks/hyperparams-experiments.html)||
-|6| 16 Aug| [Lecture on Random Forests](https://nipunbatra.github.io/ml-teaching/slides/ensemble.pdf)||[Notebook on Random Forests feature importance from scratch](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-feature-importance.html)||
+|6| 16 Aug| [Lecture on Random Forests](https://nipunbatra.github.io/ml-teaching/slides/ensemble.pdf)|[Notebook on Random Forests feature importance from scratch](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-feature-importance.html)||
 |7|20 Aug| Tutorial on RF feature importance, meshgrid, contour plots|[Notebook on Random Forests feature importance from scratch](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-feature-importance.html), [Notebook on meshgrid](https://nipunbatra.github.io/ml-teaching/notebooks/meshgrid.html)||
 
 |8| 21 Aug| [Linear Regression](https://nipunbatra.github.io/ml-teaching/slides/linear-regression.pdf)|||
