--- a/grading.qmd
+++ b/grading.qmd
@@ -27,6 +27,8 @@ title: "Grading Policy"
     - 10 or 11 absences: 2%
     - 12 or more absences: 0%
 
+Here is the [leave form](https://docs.google.com/forms/d/1efg5pt10GssAmyxIF83reFc5rQslRH4mI-yng7XXZ78/edit) for the class. Please fill it out if you are going to miss a class. Also, write an email to TA Isha Narang to check the status of your leave request.
+
 ---
 
 BONUS (above 100%)
@@ -38,7 +40,8 @@ BONUS (above 100%)
 
 ---
 
-- Potetially considering but not final some bonus marks for correct in-class resposnes to instructor questions
+- Upto 4% extra marks for answering questions in classes. Each question will be worth 0.5%. Thus, a student can avail this a maximum of 8 times. It is upto the discretion of the instructor to award these marks.
+
 
 
 
