--- a/schedule.qmd
+++ b/schedule.qmd
@@ -47,11 +47,10 @@ title: "Schedule"
 31| 29 Oct| [Unsupervised learning](https://nipunbatra.github.io/ml-teaching/slides/unsupervised.pdf)||
 32| 1 Nov| [KNN](https://nipunbatra.github.io/ml-teaching/slides/knn.pdf), [Approximate KNN](https://nipunbatra.github.io/ml-teaching/slides/KNN-approx.pdf)| |[Notebook (Parametric v/s Non-Parametric)](https://nipunbatra.github.io/ml2023/notebooks/posts/parametric-non-parametric.html), [Notebook (Curse of dimensionality)](https://nipunbatra.github.io/ml-teaching/notebooks/curse-dimensionality)| Reference on Parameteric v/s Non-Parametric [from MLSS](http://mlss.tuebingen.mpg.de/2015/slides/ghahramani/gp-neural-nets15.pdf), [ML Mastery](https://machinelearningmastery.com/parametric-and-nonparametric-machine-learning-algorithms/), [StackExchange](https://stats.stackexchange.com/questions/268638/what-exactly-is-the-difference-between-a-parametric-and-non-parametric-model), [Sebastian Raschka's blog](https://sebastianraschka.com/faq/docs/parametric_vs_nonparametric.html) |
 33| 5 Nov| [Reinforcement learning](https://nipunbatra.github.io/ml-teaching/slides/rl.pdf)|[Notebook 1](https://nipunbatra.github.io/ml-teaching/notebooks/rl-1.html), [Notebook 2](https://nipunbatra.github.io/ml-teaching/notebooks/rl-2.html)| |
-34| 7 Nov| [SVM-1]||
-35| 12 Nov| [SVM-2]||
-36| 14 Nov| [Tutorial on constrained Optimization]||
-37| 19 Nov| [SVM-3]||
-38| 21 Nov| [SVM-4]||
+34| 7 Nov| [SVM - I](https://nipunbatra.github.io/ml-teaching/slides/svm-intro.pdf)|[Notebook 1](https://nipunbatra.github.io/ml-teaching/notebooks/svm.html)|
+35| 12 Nov| [SVM-2 Kernels (slides from previous lecture)]|[Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/svm-primal-dual.html), [Notebook 2](https://nipunbatra.github.io/ml-teaching/notebooks/svm-kernel.html)||
+36| 14 Nov| [Constrained Optimization 1](https://nipunbatra.github.io/ml-teaching/slides/constrained-1.pdf), [Constrained Optimization 2 (self study)](https://nipunbatra.github.io/ml-teaching/slides/constrained-2.pdf)| [Part 2 recording from older run](https://www.youtube.com/watch?v=Gr1o97QI1PI)|
+37| 19 Nov| [Support Vector Machines (Soft Margin)](lectures/svm-soft-margin.pdf)|
 
 <!-- your comment
 
